--- a/generate/Makefile
+++ b/generate/Makefile
@@ -1,5 +1,5 @@
 CC = g++
-CPPFLAGS = -std=c++11 -Wall -pedantic
+CFLAGS = -std=c++11 -Wall -pedantic
 FILENAME = gencoords
 OBJS = gencoords.o
 PROGNAME = gen
@@ -7,7 +7,10 @@ PROGNAME = gen
 all: $(FILENAME)
 
 $(FILENAME): $(OBJS)
-	$(CC) -o $(PROGNAME) $(FLAGS) $(FILENAME).cpp
+	$(CC) -o $(PROGNAME) $(CFLAGS) $(FILENAME).cpp
+
+%.o: %.cpp
+	$(CC) $(CFLAGS) -o $@ -c $^
 
 clean:
 	rm $(PROGNAME) $(OBJS)
